--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,12 @@
         android:text="@string/str_1"
         android:onClick="loadData"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/id_tv_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-    </ScrollView>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/id_rv_item"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+</android.support.v7.widget.RecyclerView>
+
 
 </LinearLayout>
